--- a/przetwarzanie-multimediow/lab5/pm_2023_lab5.ipynb
+++ b/przetwarzanie-multimediow/lab5/pm_2023_lab5.ipynb
@@ -106,10 +106,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video = cv2.VideoCapture(0)\n",
-    "while True:\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
+    "while video.isOpened():\n",
     "    ret, frame = video.read()\n",
-    "    cv2.imshow('video - ESC zamyka okno', frame)\n",
+    "    if ret:\n",
+    "        cv2.imshow('video - ESC zamyka okno', frame)\n",
+    "    else:\n",
+    "        break\n",
     "    if cv2.waitKey(1) == 27:\n",
     "        break\n",
     "\n",
@@ -132,19 +135,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video = cv2.VideoCapture(0)\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
     "while True:\n",
     "    ret, frame = video.read()\n",
     "    \n",
-    "    frame_flip_0 = cv2.flip(frame, 0) # odbicie wzgl osi x\n",
-    "    frame_flip_1 = cv2.flip(frame, 1) # odbicie wzgl osi y\n",
-    "    frame_flip_minus1 = cv2.flip(frame, -1) # odbicie wzgl osi x i y\n",
+    "    if ret:\n",
+    "        frame_flip_0 = cv2.flip(frame, 0) # odbicie wzgl osi x\n",
+    "        frame_flip_1 = cv2.flip(frame, 1) # odbicie wzgl osi y\n",
+    "        frame_flip_minus1 = cv2.flip(frame, -1) # odbicie wzgl osi x i y\n",
     "    \n",
-    "    cv2.imshow('video', frame)\n",
-    "    cv2.imshow('video flip 0', frame_flip_0)\n",
-    "    cv2.imshow('video flip 1', frame_flip_1)\n",
-    "    cv2.imshow('video flip -1', frame_flip_minus1)\n",
-    "    \n",
+    "        cv2.imshow('video', frame)\n",
+    "        cv2.imshow('video flip 0', frame_flip_0)\n",
+    "        cv2.imshow('video flip 1', frame_flip_1)\n",
+    "        cv2.imshow('video flip -1', frame_flip_minus1)\n",
+    "    else:\n",
+    "        break\n",
     "    if cv2.waitKey(1) == 27:\n",
     "        break\n",
     "        \n",
@@ -162,26 +167,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f12d7013-e3b4-4703-98c1-4bac2b1e9990",
    "metadata": {},
    "outputs": [],
    "source": [
-    "video = cv2.VideoCapture(0)\n",
-    "while True:\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
+    "while video.isOpened():\n",
     "    ret, frame = video.read()\n",
     "\n",
-    "    frame_gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
-    "    frame_B = frame[:,:,0]\n",
-    "    frame_G = frame[:,:,1]\n",
-    "    frame_R = frame[:,:,2]\n",
+    "    if ret:\n",
+    "        frame_gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
+    "        frame_B = frame[:,:,0]\n",
+    "        frame_G = frame[:,:,1]\n",
+    "        frame_R = frame[:,:,2]\n",
     "    \n",
-    "    cv2.imshow('color',frame)\n",
-    "    cv2.imshow('gray',frame_gray)\n",
-    "    cv2.imshow('B', frame_B)\n",
-    "    cv2.imshow('G', frame_G)\n",
-    "    cv2.imshow('R', frame_R)\n",
-    "    \n",
+    "        cv2.imshow('color',frame)\n",
+    "        cv2.imshow('gray',frame_gray)\n",
+    "        cv2.imshow('B', frame_B)\n",
+    "        cv2.imshow('G', frame_G)\n",
+    "        cv2.imshow('R', frame_R)\n",
+    "    else:\n",
+    "        break\n",
     "    if cv2.waitKey(1) == 27:\n",
     "        break\n",
     "\n",
@@ -199,20 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c5f18a8e-71f2-4799-ac0a-410a2efd9925",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
-    "video = cv2.VideoCapture(0)\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
     "\n",
     "radius = 50\n",
     "zmniejszanie = True\n",
     "\n",
-    "while (True):\n",
+    "while video.isOpened():\n",
     "    ret, frame = video.read()\n",
+    "    \n",
+    "    if not ret:\n",
+    "        break\n",
     "    \n",
     "    if zmniejszanie == True:\n",
     "        radius = radius -1\n",
@@ -233,7 +243,7 @@
     "                thickness = 1)\n",
     "    cv2.imshow('myvideo', frame)\n",
     "    \n",
-    "    if cv2.waitKey(1) == 27:\n",
+    "    if cv2.waitKey(25) == 27:\n",
     "        break\n",
     "        \n",
     "video.release()\n",
@@ -291,13 +301,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4bc07ebd-436b-44e9-a33b-429872776b71",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import datetime\n",
+    "import time\n",
+    "\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
+    "frame_count = str(int(video.get(7)))\n",
+    "counter = 0\n",
+    "while video.isOpened():\n",
+    "    ret, frame = video.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    counter+=1\n",
+    "    \n",
+    "    text = str(datetime.datetime.now()) + str(' ') + str(counter) + str('/') + str(frame_count)\n",
+    "    cv2.putText(frame,\n",
+    "                text = text,\n",
+    "                org=(25,25),\n",
+    "                fontFace=cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                fontScale=0.5,\n",
+    "                color=(255,255,255),\n",
+    "                thickness=1)\n",
+    "    \n",
+    "    cv2.imshow('video', frame)\n",
+    "    if cv2.waitKey(25) == 27:\n",
+    "        break\n",
+    "        \n",
+    "video.release()\n",
+    "cv2.destroyAllWindows()\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,11 +367,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b34d7917-0422-4896-8a6f-8628ec99fec1",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import datetime\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "video = cv2.VideoCapture('moon.mov')\n",
+    "\n",
+    "M = np.array([[0, -1, 0], [-1, 5, -1], [0, -1, 0]])\n",
+    "\n",
+    "while video.isOpened():\n",
+    "    ret, frame = video.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    # Blur\n",
+    "    frame_blur = cv2.blur(frame, (11,11))\n",
+    "    \n",
+    "    # Gaussian blur\n",
+    "    frame_gaussian = cv2.GaussianBlur(frame, (11,11), 3)\n",
+    "    \n",
+    "    # Mask\n",
+    "    frame_mask = cv2.filter2D(frame, ddepth=-1, kernel=M)\n",
+    "    \n",
+    "    cv2.imshow('color',frame)\n",
+    "    cv2.imshow('blur', frame_blur)\n",
+    "    cv2.imshow('gaussian', frame_gaussian)\n",
+    "    cv2.imshow('mask', frame_mask)\n",
+    "    \n",
+    "    if cv2.waitKey(25) == 27:\n",
+    "        break\n",
+    "        \n",
+    "video.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8ea5e2-07b8-4056-a4f4-fde282dd13b9",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -352,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
