--- a/jezyki-python-i-r/lab5/notatki.org
+++ b/jezyki-python-i-r/lab5/notatki.org
@@ -1,16 +1,17 @@
 * TODO Zrobic model dla win czerwonych i dla win bialych
 * TODO Zrobic korelacje Kendala i sprawdiz sobie jak wychodzi
+* TODO Dolozyc do image wp-jupyter pakiet pythonowy ydata-profiling
 
-# Notacja na zmienne opisowe kategoryczne
+* Notacja na zmienne opisowe kategoryczne
 Mozna podzeli na kategorie (np. red, white) albo przypisac wektory. Np.:
-* red [1 0]
-* white [0 1]
+- red [1 0]
+- white [0 1]
 W celu nie dopuszczenia do faforyzacji ktorejs ze zmiennych.
 
-# Punkty oddalone
+* Punkty oddalone
 W celu znalezienia punktow oddalonych mozna zastosowac metody
-* IQR (domyslnie w metodzie IQR jest +- 1.5 IQR, ale decyzja nalezy do analityka)
-* 3x sigma
+- IQR (domyslnie w metodzie IQR jest +- 1.5 IQR, ale decyzja nalezy do analityka)
+- 3x sigma
 Mozna je tez zidentyfikowac przy wykresach korelacji zmiennych.
 
 Jezeli jest duzo punktow oddalocnych to trzbea zwrocic szczegolna uwage i zrobic
@@ -18,29 +19,38 @@ pelna analize (z boxplotami itd itp). Punkty oddalone beda model psuly. Nalezy p
 odpowiednie kryterium jak wyrzucac punkty oddalone, jednak moze sie okazac ze spowoduje to
 utrated znaczajcej ilosci posiadanych danych.
 
-# Podzial na grupy/modele
+* Podzial na grupy/modele
 Jezeli dwie grypy sie widocznie roznia miedzy soba (np. pod wzgledem wartosci srednich), mozna
 rozwazyc wykonanie dwoch modeli. Pokazane na przykaldzie win czerwonych i bialych ze zbioru danych.
 
-# loc/iloc examples
+* loc/iloc examples
 white_whine.iloc[3:6, 2:8]
 white_whie.loc(3:6, 'clorides':'color'])
 
-# Korelacja pomiedzy predyktorem a zmienna celu
+* Korelacja pomiedzy predyktorem a zmienna celu
 Zeby sprawdzic czy na podstawie danych predyktorow moge zbudowac model do uzyskania
 danego predyktora, musze sprawdzic czy zachodzi pomiedzy predyktorem a zmienna celu korelacja.
 Na przyklad, korelacja linowa. Jezeli jednak zastosuje korelacje liniowe do wykrywania korelacji
 nieliniowych, to ich nie wykryje.
 
 Np. w korelacji Pearsona: jezeli znajduje wartosci bardzo male (patrz wyklad) to nie ma korelacji
-liniowej.
-* 0 brak korelacji
-* 0-0.25 nedzna korelacja (umowne)
-* 1/-1 korelacja liniowa
+liniowej:
+- 0 brak korelacji
+- 0-0.25 nedzna korelacja (umowne)
+- 1/-1 korelacja liniowa
 
 Jezlie jakis predyktor jest (silnie) skorelowany z wieksza iloscia (np. 2) zmiennych opisowych,
-to jest to korelacja wyzszego rzedu (np. drugiego rzedu).
+to jest to korelacja wyzszego rzedu/stopnia (np. drugiego rzedu/stopnia).
 
 Uwaga, jezeli Spearman lepiej wychodzi od Pearsona, to jest to przeslanka, ze korelacja moze
 byc nieliniowa.
 
+** Korelacja Liniowa
+- Pearons
+- Cramer
+Jezeli korelacja jest nieliniowa, to korelacja liniowa moze wyjsc zerowa albo bardzo niska.
+Nalezy zastosowac jeszcze korelacje nielioniowa, zeby sprawdzic czy mimo to nie wystepuje
+koreleacja nieliniowa.
+
+** Korelcja Nieliniowa
+- ΦK (Phi-K)
