add data description

--- a/jezyki-python-i-r/raport/raport-smoke-detector-iot.ipynb
+++ b/jezyki-python-i-r/raport/raport-smoke-detector-iot.ipynb
@@ -7,27 +7,59 @@
    "source": [
     "# Czujnik dymu IoT - Eksploracja danych i uczenie maszynowe\n",
     "Ninejszy raport przedstawia proces eksploracji danych oraz wynik budowy modelu w postaci efektów uczenia maszynowego, które zostały oparte na zbiorze danych [Smoke Detection Dataset](https://www.kaggle.com/datasets/deepcontractor/smoke-detection-dataset)\n",
-    "dalej zwanych danymi.\n",
+    "dalej zwanych danymi. Dane pochodzą z odczytów danych zmierzonych przez czujniki dymu typu IoT. Odczyty były wykonywane z częstotliwością $1Hz$. Czujniki dymu, z których pochodzą odczyty, były usytuowane w wielu warunkach środowiskowych począwszy od\n",
+    "wnętrz pomieszczeń, na zewnątrz, w sąsiedztwie z generatorami ciepła oraz dymu takimi jak ogniska, grille itp.\n",
     "\n",
     "## Cel uczenia maszynowego\n",
-    "Zamierzonym celem było osiągnięcie modelu, umożliwiającego wykrywanie dymu na podstawie wybranych zmiennych opisowych. Wybór zmiennych opisowych został dokonany na podstawie analizy danych ze względu na korelację.\n",
-    "Zmienna celu została zdefinowana jako zmienna dychotomiczna, która przyjmuje wartości $0$ i $1$ kolejno oznaczające `spoczynek` oraz `akcję uruchomienia alarmu`."
+    "Zamierzonym celem było osiągnięcie modelu, umożliwiającego wykrywanie pożaru na podstawie wybranych zmiennych ilościowych. Wybór zmiennych ilościowych został dokonany na podstawie analizy danych ze względu na korelację.\n",
+    "Zmienna celu została zdefinowana jako zmienna opisowa dychotomiczna, która przyjmuje wartości $0$ i $1$ kolejno oznaczające `spoczynek` oraz `akcję uruchomienia alarmu/wykrycia pożaru`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91ec0d93-1cdc-4234-90d5-bf7af9becf89",
+   "metadata": {},
+   "source": [
+    "## Wczytanie wykorzystanych pakietów"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "a2002bc9-931c-4a12-9fea-8f2c04a2bb9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'missingno'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmissingno\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmsno\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# uczenie maszynowe\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#ignorowanie błędów\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'missingno'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import missingno as msno\n",
+    "\n",
+    "# uczenie maszynowe\n",
     "\n",
     "#ignorowanie błędów\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e06fe5da-4e60-4d07-a9cb-2bfd82aabe22",
+   "metadata": {},
+   "source": [
+    "## Wczytanie oraz przedstawienie danych"
    ]
   },
   {
@@ -60,6 +92,14 @@
    ],
    "source": [
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee831600-df4b-430b-87fa-8dba29139a7f",
+   "metadata": {},
+   "source": [
+    "W danych znajduje się ponad 62 tysiące rekordów, każdy rozłożony na 16 kolumnt. Ilość wierszy przeważa nad ilością kolumn."
    ]
   },
   {
@@ -241,7 +281,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "855bee1f-c072-4166-89e9-00361af067d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'UTC', 'Temperature[C]', 'Humidity[%]', 'TVOC[ppb]',\n",
+       "       'eCO2[ppm]', 'Raw H2', 'Raw Ethanol', 'Pressure[hPa]', 'PM1.0', 'PM2.5',\n",
+       "       'NC0.5', 'NC1.0', 'NC2.5', 'CNT', 'Fire Alarm'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df2cff5-21f2-46a6-9029-a48b0bca061b",
+   "metadata": {},
+   "source": [
+    "Dane zostały podzielone na następujące zmienne opisowe:\n",
+    "* `Unnamed: 0` - licza porządkowa\n",
+    "* `UTC` - czas odczytu rekordu danych zebranych z czujnika dymu podany w formacie Coordinated Universal Time, UTC\n",
+    "* `Temperature[C]` - temperatura otoczenia czujnika dymu podana w stopniach Celsjusza\n",
+    "* `Humidity[%]` - wilgotność otoczenia czujnika dymu podana w procentach (wilgotność względna - wyrażony w procentach stosunek ciśnienia cząstkowego pray wodnej zawartej w powietrzu do prężności pary wodnej nasyconej nad płaską powierzchnią czystej wody w tej samej temperaturze [[źródło](https://pl.wikipedia.org/wiki/Wilgotno%C5%9B%C4%87_powietrza)])\n",
+    "* `TVOC[ppb]` - (***Total Volatile Organic Compounds***) *całkowita ilość lotnych związków organicznych* podana w ***parts per billion*** (***VOCs*** (*LZO*) - związki organiczne o wysokiej prężności pray [[źródło 1](https://pl.wikipedia.org/wiki/Lotne_zwi%C4%85zki_organiczne) [źródło 2](https://en.wikipedia.org/wiki/Volatile_organic_compound)]\n",
+    "* `eCO2[ppm]` - ekwiwalent koncentracji CO2 podany w ***parts per million***\n",
+    "* `Raw H2` - ilość wodóru molekularnego\n",
+    "* `Raw Ethanol` - ilość etanolu\n",
+    "* `Pressure[hPa]` - ciśnienie otoczenia czujnika wyrażone w hektopaskalach\n",
+    "*  `PM1.0` - ilość wykrytych cząstek o rozmiarze $<1.0\\micro m$\n",
+    "*  `PM2.5` - ilość wykrytych cząstek o rozmiarze $>1.0\\micro m$ i $<2.5\\micro m$\n",
+    "*  `NC0.5` - koncentracja wykrtych cząstek o rozmiarze $<0.5\\micro m$\n",
+    "*  `NC1.0` - koncentracja wykrtych cząstek o rozmiarze $>0.5\\micro m$ i $<1.0\\micro m$\n",
+    "*  `NC2.5` - koncentracja wykrtych cząstek o rozmiarze $>1.0\\micro m$ i $<2.5\\micro m$\n",
+    "*  `CNT` - licznik ilości zebranych pomiarów z danego czujnika dymu\n",
+    "*  `Fire Alarm` - stan czujnika dymu; $1$ jeśli czujnik wykrywa \"pożar\" (jest uruchamiany alarm) - jest to zmienna celu\n",
+    "\n",
+    "Po zapoznaniu się z danymi uznano, że kolumny `Unnamed: 0`, `UTC` oraz `CNT` nie są skorelowane ze zmienna celu. W rezultacie kolumny te pominęto w dalszej analizie oraz usunięto je ze zbioru."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "25a2a59a-ccdf-478b-8e60-94a79d6de7cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(62630, 13)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "significantColumns = ['Temperature[C]', 'Humidity[%]', 'TVOC[ppb]', 'eCO2[ppm]', 'Raw H2', 'Raw Ethanol', 'Pressure[hPa]', 'PM1.0', 'PM2.5', 'NC0.5', 'NC1.0', 'NC2.5', 'Fire Alarm']\n",
+    "data = data[significantColumns]\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1a6ddcc-efc5-44e1-b87a-32d84b8a6602",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "dd436c77-1e2d-4477-ae66-c656a45fb7eb",
    "metadata": {},
    "outputs": [
@@ -266,8 +387,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>UTC</th>\n",
        "      <th>Temperature[C]</th>\n",
        "      <th>Humidity[%]</th>\n",
        "      <th>TVOC[ppb]</th>\n",
@@ -280,16 +399,12 @@
        "      <th>NC0.5</th>\n",
        "      <th>NC1.0</th>\n",
        "      <th>NC2.5</th>\n",
-       "      <th>CNT</th>\n",
        "      <th>Fire Alarm</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>62630.000000</td>\n",
-       "      <td>6.263000e+04</td>\n",
-       "      <td>62630.000000</td>\n",
        "      <td>62630.000000</td>\n",
        "      <td>62630.000000</td>\n",
        "      <td>62630.000000</td>\n",
@@ -306,8 +421,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>31314.500000</td>\n",
-       "      <td>1.654792e+09</td>\n",
        "      <td>15.970424</td>\n",
        "      <td>48.539499</td>\n",
        "      <td>1942.057528</td>\n",
@@ -320,13 +433,10 @@
        "      <td>491.463608</td>\n",
        "      <td>203.586487</td>\n",
        "      <td>80.049042</td>\n",
-       "      <td>10511.386157</td>\n",
        "      <td>0.714626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>18079.868017</td>\n",
-       "      <td>1.100025e+05</td>\n",
        "      <td>14.359576</td>\n",
        "      <td>8.865367</td>\n",
        "      <td>7811.589055</td>\n",
@@ -339,13 +449,10 @@
        "      <td>4265.661251</td>\n",
        "      <td>2214.738556</td>\n",
        "      <td>1083.383189</td>\n",
-       "      <td>7597.870997</td>\n",
        "      <td>0.451596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.654712e+09</td>\n",
        "      <td>-22.010000</td>\n",
        "      <td>10.740000</td>\n",
        "      <td>0.000000</td>\n",
@@ -359,12 +466,9 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>15657.250000</td>\n",
-       "      <td>1.654743e+09</td>\n",
        "      <td>10.994250</td>\n",
        "      <td>47.530000</td>\n",
        "      <td>130.000000</td>\n",
@@ -377,13 +481,10 @@
        "      <td>8.820000</td>\n",
        "      <td>1.384000</td>\n",
        "      <td>0.033000</td>\n",
-       "      <td>3625.250000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>31314.500000</td>\n",
-       "      <td>1.654762e+09</td>\n",
        "      <td>20.130000</td>\n",
        "      <td>50.150000</td>\n",
        "      <td>981.000000</td>\n",
@@ -396,13 +497,10 @@
        "      <td>12.450000</td>\n",
        "      <td>1.943000</td>\n",
        "      <td>0.044000</td>\n",
-       "      <td>9336.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>46971.750000</td>\n",
-       "      <td>1.654778e+09</td>\n",
        "      <td>25.409500</td>\n",
        "      <td>53.240000</td>\n",
        "      <td>1189.000000</td>\n",
@@ -415,13 +513,10 @@
        "      <td>14.420000</td>\n",
        "      <td>2.249000</td>\n",
        "      <td>0.051000</td>\n",
-       "      <td>17164.750000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>62629.000000</td>\n",
-       "      <td>1.655130e+09</td>\n",
        "      <td>59.930000</td>\n",
        "      <td>75.200000</td>\n",
        "      <td>60000.000000</td>\n",
@@ -434,7 +529,6 @@
        "      <td>61482.030000</td>\n",
        "      <td>51914.680000</td>\n",
        "      <td>30026.438000</td>\n",
-       "      <td>24993.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -442,48 +536,38 @@
        "</div>"
       ],
       "text/plain": [
-       "         Unnamed: 0           UTC  Temperature[C]   Humidity[%]     TVOC[ppb]  \\\n",
-       "count  62630.000000  6.263000e+04    62630.000000  62630.000000  62630.000000   \n",
-       "mean   31314.500000  1.654792e+09       15.970424     48.539499   1942.057528   \n",
-       "std    18079.868017  1.100025e+05       14.359576      8.865367   7811.589055   \n",
-       "min        0.000000  1.654712e+09      -22.010000     10.740000      0.000000   \n",
-       "25%    15657.250000  1.654743e+09       10.994250     47.530000    130.000000   \n",
-       "50%    31314.500000  1.654762e+09       20.130000     50.150000    981.000000   \n",
-       "75%    46971.750000  1.654778e+09       25.409500     53.240000   1189.000000   \n",
-       "max    62629.000000  1.655130e+09       59.930000     75.200000  60000.000000   \n",
+       "       Temperature[C]   Humidity[%]     TVOC[ppb]     eCO2[ppm]        Raw H2  \\\n",
+       "count    62630.000000  62630.000000  62630.000000  62630.000000  62630.000000   \n",
+       "mean        15.970424     48.539499   1942.057528    670.021044  12942.453936   \n",
+       "std         14.359576      8.865367   7811.589055   1905.885439    272.464305   \n",
+       "min        -22.010000     10.740000      0.000000    400.000000  10668.000000   \n",
+       "25%         10.994250     47.530000    130.000000    400.000000  12830.000000   \n",
+       "50%         20.130000     50.150000    981.000000    400.000000  12924.000000   \n",
+       "75%         25.409500     53.240000   1189.000000    438.000000  13109.000000   \n",
+       "max         59.930000     75.200000  60000.000000  60000.000000  13803.000000   \n",
        "\n",
-       "          eCO2[ppm]        Raw H2   Raw Ethanol  Pressure[hPa]         PM1.0  \\\n",
-       "count  62630.000000  62630.000000  62630.000000   62630.000000  62630.000000   \n",
-       "mean     670.021044  12942.453936  19754.257912     938.627649    100.594309   \n",
-       "std     1905.885439    272.464305    609.513156       1.331344    922.524245   \n",
-       "min      400.000000  10668.000000  15317.000000     930.852000      0.000000   \n",
-       "25%      400.000000  12830.000000  19435.000000     938.700000      1.280000   \n",
-       "50%      400.000000  12924.000000  19501.000000     938.816000      1.810000   \n",
-       "75%      438.000000  13109.000000  20078.000000     939.418000      2.090000   \n",
-       "max    60000.000000  13803.000000  21410.000000     939.861000  14333.690000   \n",
+       "        Raw Ethanol  Pressure[hPa]         PM1.0         PM2.5         NC0.5  \\\n",
+       "count  62630.000000   62630.000000  62630.000000  62630.000000  62630.000000   \n",
+       "mean   19754.257912     938.627649    100.594309    184.467770    491.463608   \n",
+       "std      609.513156       1.331344    922.524245   1976.305615   4265.661251   \n",
+       "min    15317.000000     930.852000      0.000000      0.000000      0.000000   \n",
+       "25%    19435.000000     938.700000      1.280000      1.340000      8.820000   \n",
+       "50%    19501.000000     938.816000      1.810000      1.880000     12.450000   \n",
+       "75%    20078.000000     939.418000      2.090000      2.180000     14.420000   \n",
+       "max    21410.000000     939.861000  14333.690000  45432.260000  61482.030000   \n",
        "\n",
-       "              PM2.5         NC0.5         NC1.0         NC2.5           CNT  \\\n",
-       "count  62630.000000  62630.000000  62630.000000  62630.000000  62630.000000   \n",
-       "mean     184.467770    491.463608    203.586487     80.049042  10511.386157   \n",
-       "std     1976.305615   4265.661251   2214.738556   1083.383189   7597.870997   \n",
-       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
-       "25%        1.340000      8.820000      1.384000      0.033000   3625.250000   \n",
-       "50%        1.880000     12.450000      1.943000      0.044000   9336.000000   \n",
-       "75%        2.180000     14.420000      2.249000      0.051000  17164.750000   \n",
-       "max    45432.260000  61482.030000  51914.680000  30026.438000  24993.000000   \n",
-       "\n",
-       "         Fire Alarm  \n",
-       "count  62630.000000  \n",
-       "mean       0.714626  \n",
-       "std        0.451596  \n",
-       "min        0.000000  \n",
-       "25%        0.000000  \n",
-       "50%        1.000000  \n",
-       "75%        1.000000  \n",
-       "max        1.000000  "
+       "              NC1.0         NC2.5    Fire Alarm  \n",
+       "count  62630.000000  62630.000000  62630.000000  \n",
+       "mean     203.586487     80.049042      0.714626  \n",
+       "std     2214.738556   1083.383189      0.451596  \n",
+       "min        0.000000      0.000000      0.000000  \n",
+       "25%        1.384000      0.033000      0.000000  \n",
+       "50%        1.943000      0.044000      1.000000  \n",
+       "75%        2.249000      0.051000      1.000000  \n",
+       "max    51914.680000  30026.438000      1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
